--- a/src/app/portal/portal.component.html
+++ b/src/app/portal/portal.component.html
@@ -1,10 +1,6 @@
 <ng-content></ng-content>
-<div
-  [clickOutsideDetection]="'modal'"
-  *ngIf="modal$$ | async as modal"
-  class="overlay"
->
-  <div class="modal">
+<div *ngIf="modal$$ | async as modal" class="overlay">
+  <div (clickOutside)="modal$$.next(null)" class="modal">
     {{ modal }}
     <button (click)="modal$$.next(null)">Close</button>
   </div>
